# BOUT-EAGLE

./: README.md  compact.py  extract.py
BotsServer/: serversetup.txt  start.bat
BotsServer/python-botsserver/: .env.example  README.md  pyproject.toml
BotsServer/python-botsserver/botsserver/: config.py  server.py
BotsServer/python-botsserver/botsserver/bots/: plugins.py  registry.py  scheduler.py
BotsServer/python-botsserver/botsserver/db/: repo.py
BotsServer/python-botsserver/botsserver/protocol/: codec.py  messages.py
BotsServer/python-botsserver/botsserver/s2s/: client.py  server.py
BotsServer/python-botsserver/botsserver/security/: crypto.py  session.py
BotsServer/python-botsserver/botsserver/tests/: test_codec.py  test_registry.py  test_s2s.py  test_scheduler.py
BotsServer/python-botsserver/config/: botsserver.yaml
BotsServer/python-botsserver/docs/: protocol.md
BotsServer/python-botsserver/systemd/: botsserver.service
LoginServer/: start.bat
common/pycommon/: pyproject.toml
common/pycommon/pycommon/observability/: logging.py
common/pycommon/pycommon/protocol/: codec.py
common/pycommon/pycommon/testing/: fuzz.py
dungeon_extracted/: manifest.json  mt01_d01.dun  mt02_d01.dun  mt03_d01.dun  mt04_d01.dun  p01_d01.dun  p02_d01.dun  p03_d01.dun  p04_d01.dun  p04_d02.dun  p05_d01.dun  p06_d01.dun  p07_d01.dun  p08_d01.dun  p09_d01.dun  p10_d01.dun  p11_d01.dun  p12_d01.dun  p12_d02.dun  p13_d01.dun  p14_d01.dun  p15_d01.dun  p15_d02.dun  p16_d01.dun  p17_d01.dun  p18_d01.dun  p19_d01.dun  p20_d01.dun  p_elite01.dun  p_elite02.dun  (+8 more)
(+76 files in other folders)
