[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bout-eagle-botsserver"
version = "0.1.0"
description = "Python 3.12 BotsServer compatible scaffold for BOUT-EAGLE"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "prometheus-client>=0.20.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "PyYAML>=6.0.1",
  "python-json-logger>=2.0.7",
  "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = [
  "botsserver/tests",
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
